--- a/Benchmarkbtp.html
+++ b/Benchmarkbtp.html
@@ -417,7 +417,7 @@
             
             <div class="footer">
                 Par <strong style="color: #8B5CF6;">IAvenir</strong> • Conseil & Formation IA<br>
-                📧 <a href="/cdn-cgi/l/email-protection#8ce1edf8e4e5e9f9a2e0e9ebe9edffcce5edfae9e2e5fea1eae3fee1edf8e5e3e2a2eafe"><span class="__cf_email__" data-cfemail="b8d5d9ccd0d1ddcd96d4dddfddd9cbf8d1d9ceddd6d1ca95ded7cad5d9ccd1d7d696deca">[email&#160;protected]</span></a> • 📱 07 61 60 22 77
+                📧 mathieu.legeas@iavenir-formation.fr • 📱 07 61 60 22 77
             </div>
         </div>
         
@@ -479,7 +479,7 @@
                     <a href="https://iavenir-formation.fr" target="_blank" class="btn-cta btn-cta-secondary">Découvrir IAvenir</a>
                 </div>
                 <p style="font-size: 0.85rem; margin-top: 20px;">
-                    📧 <a href="/cdn-cgi/l/email-protection#f09d918498999585de9c9597959183b0999186959e9982dd969f829d9184999f9ede9682" style="color: white; text-decoration: underline;"><span class="__cf_email__" data-cfemail="523f33263a3b37277c3e3735373321123b3324373c3b207f343d203f33263b3d3c7c3420">[email&#160;protected]</span></a> • 📱 07 61 60 22 77
+                    📧 mathieu.legeas@iavenir-formation.fr • 📱 07 61 60 22 77
                 </p>
             </div>
         </div>
